[project]
name = "jax_cloud_monitoring"
version = "0.1.0"
description = "JAX Cloud Monitoring to send JAX metrics to Google Cloud Monitoring"
readme = "README.md"
authors = [
    { name = "Sam Stoelinga", email = "sammiestoel@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "google-cloud-monitoring>=2.28.0",
    "jax>=0.6.2",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
